updated api spec and server to respect restful api
